--- a/main.html
+++ b/main.html
@@ -12,5 +12,17 @@
 </script>
 
 </body>
+	<header>
+		logo
+		<nav>
+			<a>link</a>
+			<a>link</a>
+			<a>link</a>
+			<a>link</a>
+		</nav>
+	</header>
+	<section>
+		
+	</section>
 
 </html>
